# Repository-Scale-Architectural-Intelligence-Beyond-Code-Completion

./: .gitignore  AGENTS.md  README.md  Repository-Scale Architectural Intelligence_ Beyond Code Completion.md  pyproject.toml
.dist/: diff-report.json  generate-report.json  impact-cli-explain.json  impact-cli-fuzzy.json  impact-filtered.json  impact-missing.json  impact-tests-only.json  intent-plan.json  policy-report.json  query-find-auth.json  rig-view.html  rig.json  verification-report.json
.dist/change-sets/: t1-changeset.json  t2-changeset.json  t3-changeset.json  t4-changeset.json  t5-changeset.json  t6-changeset.json
.dist/neo4j/: edges.csv  import.cypher  nodes.csv
.github/workflows/: rig-gate.yml
config/: policy-rules-backend.txt  policy-rules-frontend.txt  policy-rules-python.txt  policy-rules.txt
docs/: OPERATOR_RUNBOOK.md
extensions/rig-copilot-mode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
extensions/rig-copilot-mode/docs/: DEPLOYMENT.md  USER_GUIDE.md
extensions/rig-copilot-mode/src/: extension.ts  mcpServer.ts
scripts/: bootstrap-baseline.ps1  demo-5min.ps1
src/rig_mvp/: __init__.py  cli.py  graph_store.py  models.py  neo4j_export.py  pipeline.py  policy.py  query.py  rig_diff.py  viewer.py
src/rig_mvp/agents/: __init__.py  models.py  orchestrator.py  rules.py  verification.py  workflow.py
src/rig_mvp/extractors/: ast_extractor.py  build_extractor.py  dotnet_extractor.py  javascript_build_extractor.py  javascript_source_extractor.py  maven_extractor.py  python_build_extractor.py  (+1 more)
