[project]
name = "rig-mvp"
version = "0.1.0"
description = "Repository Intelligence Graph MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rig-build = "rig_mvp.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]